Ghanges on input field for date

--- a/Blazor_CORE.Client/appsettings.json
+++ b/Blazor_CORE.Client/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "ConcertManagementDatabase": "Server= (localdb)\\MSSQLLocalDB;Database=ConcertManagement;user id=SQLID;password=SQLPWD;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "ConcertManagementDatabase": "Server=tcp:blazorcoreserver.database.windows.net,1433;Initial Catalog=ConcertManagement;Persist Security Info=False;User ID={ajasic};Password={Optimizam081015!};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
